fixed css for reservation button, no longer stretching

--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -30,6 +30,7 @@
     border: 2px black solid;
     border-radius: 5px;
     padding: 10px;
+    height: 100px;
 }
 
 .si-callout-price {
